--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@material-ui/icons": "^4.9.1",
     "clsx": "^1.0.4",
     "firebase": "^7.8.0",
+    "formik": "^2.1.4",
     "query-string": "^6.11.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-firebase-hooks": "^2.1.1",
     "react-helmet-async": "^1.0.4",
+    "react-markdown": "^4.3.1",
     "react-router": "next",
-    "react-router-dom": "next"
+    "react-router-dom": "next",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "firebase-tools": "^7.12.1",
