--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "query-string": "^6.11.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-dropzone": "^10.2.1",
     "react-firebase-hooks": "^2.1.1",
     "react-helmet-async": "^1.0.4",
     "react-markdown": "^4.3.1",
     "react-router": "next",
     "react-router-dom": "next",
+    "ulid": "^2.3.0",
     "yup": "^0.28.3"
   },
   "devDependencies": {
