--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^1.0.4",
     "firebase": "^7.8.0",
     "formik": "^2.1.4",
+    "fuse.js": "^3.6.1",
     "query-string": "^6.11.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
